Fix for line wraps of work experiences section within HTML CV

--- a/dev/assets/scss/cv.scss
+++ b/dev/assets/scss/cv.scss
@@ -536,6 +536,11 @@ aside {
 			top: 15px;
 			width: 200px;
 		}
+
+		.work-highlights > li:first-child {
+			box-sizing: border-box;
+			padding-right: 210px;
+		}
 	}
 
 	aside {
